--- a/函数/函数的基本使用.md
+++ b/函数/函数的基本使用.md
@@ -38,7 +38,7 @@ def null_func():
     pass
 ```
 
-## 函数的参数使用
+## 函数的参数使用  
 ```python
 # 位置参数,定义函数的时候按照从左到右顺序依次定义
 def foo(x,y,z):
@@ -48,11 +48,17 @@ foo(1,2,3)
 # 关键字参数，在调用函数时按照key=value的形式为参数传值
 foo(x=111,z=222,y=123)
 
-# 默认参数,可穿可不穿
+# 默认参数,可传可不传
 def register(name,age,gender="male"):
     print(name,age,gender)
 register("xx",12,"female")
 
-# 可变长参数,*与**
+# 可变长参数,*与** 可变长参数指的是在调用函数时传入的参数个数溢出了，对应着这些溢出的参数必须要有形参来接受
+def foo (x,y,*z):
+    print(x,y,z)
+foo(1,2,3,4,5,6)# *代表接收位置参数
 
+def foo (x,y,**z):
+    print(x,y,z)
+foo(1,2,b=3,c=4,d=5,e=6)# **代表关键字参数
 ```
