--- a/函数/其他.md
+++ b/函数/其他.md
@@ -50,3 +50,52 @@ f(l)  # 调用时传递参数
 
 ```
 ## 二分法
+```python
+# 有一个按照从小到大顺序排列的数字列表需要从该数字列表中找到我们想要的一个数字
+nums = [-5, 3, 7, 19, 23, 45, 63, 67, 103]
+# def search(find_num,列表):
+#     mid_val = 找到列表的中间值
+#     if find_num > mid_val:
+#         # 接下来应该查找的是列表的右半部分
+#         新列表 = 切出列表的右半部分
+#         search(find_num,新列表)
+#     elif find_num < mid_val:
+#         # 接下来应该查找的是列表的左半部分
+#         新列表 = 切出列表的左半部分
+#         search(find_num, 新列表)
+#     else:
+#         print('find it')
+def search(find_num,nums_list):
+    mid_index = len(nums_list) // 2
+    mid_val=nums_list[mid_index]
+    if mid_val > find_num:
+        search(find_num,nums_list[mid_index+1:])
+    elif mid_val < find_num:
+        search(find_num,nums_list[:mid_index])
+    else:
+        print(find_num)
+```
+
+## 匿名函数
+```python
+# 普通函数
+def add(x, y):
+    return x + y
+# Lambda 函数
+add_lambda = lambda x, y: x + y
+
+
+salaries = {
+    'egon': 3000,
+    'tom': 7000,
+    'lili': 10000,
+    'jack': 2000
+}
+
+res = max(salaries,key=lambda k:salaries[k])
+res = min(salaries,key=lambda k:salaries[k])
+res = sorted(salaries,key=lambda k:salaries[k])
+res = sorted(salaries,key=lambda k:salaries[k],reverse=True)
+print(res)
+```
+## 内置函数
