--- a/面向对象/类和对象.md
+++ b/面向对象/类和对象.md
@@ -327,3 +327,43 @@ setattr(t,'age',18) # 等同于t.age=18
 # delattr(x, 'y')
 delattr(t,'age') # 等同于del t.age
 ```
+
+## __str__和__del__方法
+```python
+class Person:
+    def __init__(self, name, age):
+        self.name = name
+        self.age = age
+    
+    def __str__(self):
+        return f"Person: {self.name}, {self.age}岁"
+
+# 使用示例
+p = Person("张三", 25)
+print(p)  # 输出: Person: 张三, 25岁
+print(str(p))  # 输出: Person: 张三, 25岁
+
+# __del__是析构函数，在对象被销毁时自动调用。
+class FileHandler:
+    def __init__(self, filename):
+        self.filename = filename
+        self.file = open(filename, 'w')
+        print(f"文件 {filename} 已打开")
+    
+    def write_data(self, data):
+        self.file.write(data + '\n')
+    
+    def __del__(self):
+        if hasattr(self, 'file') and self.file:
+            self.file.close()
+            print(f"文件 {self.filename} 已关闭")
+
+# 使用示例
+def test_del():
+    fh = FileHandler("test.txt")
+    fh.write_data("Hello World")
+    # 函数结束时，fh对象会被自动销毁，触发__del__
+
+test_del()  # 输出: 文件 test.txt 已打开
+            # 输出: 文件 test.txt 已关闭
+```
